--- a/package.json
+++ b/package.json
@@ -1,30 +1,92 @@
 {
   "name": "@hmlet/ui",
   "version": "0.1.0",
+  "license": "MIT",
   "type": "module",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist"
   ],
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
+      "require": "./dist/index.cjs"
+    },
+    "./styles/*": "./dist/styles/*",
+    "./package.json": "./package.json"
   },
   "engines": {
     "pnpm": ">=10.0.0",
     "node": ">=24.0.0"
   },
+  "scripts": {
+    "build": "vite build && tsc -p tsconfig.build.json && node ./internals/scripts/copy-styles.mjs",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "preinstall": "corepack enable && node ./internals/scripts/preflight.mjs",
+    "commit": "node internals/scripts/commit.mjs",
+    "prepare": "husky",
+    "release": "semantic-release",
+    "deps:check": "pnpm install --frozen-lockfile",
+    "licenses:check": "license-checker --production --failOn \"GPL;AGPL\""
+  },
   "engineStrict": true,
   "packageManager": "pnpm@10.0.0",
-  "sideEffects": false,
+  "sideEffects": [
+    "**/*.css"
+  ],
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@radix-ui/react-accordion": "1.2.3",
+    "@radix-ui/react-alert-dialog": "1.1.6",
+    "@radix-ui/react-aspect-ratio": "1.1.2",
+    "@radix-ui/react-avatar": "1.1.3",
+    "@radix-ui/react-checkbox": "1.1.4",
+    "@radix-ui/react-collapsible": "1.1.3",
+    "@radix-ui/react-context-menu": "2.2.6",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-hover-card": "1.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-menubar": "1.1.6",
+    "@radix-ui/react-navigation-menu": "1.2.5",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-progress": "1.1.2",
+    "@radix-ui/react-radio-group": "1.2.3",
+    "@radix-ui/react-scroll-area": "1.2.3",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
+    "@radix-ui/react-slider": "1.2.3",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-switch": "1.1.3",
+    "@radix-ui/react-tabs": "1.1.3",
+    "@radix-ui/react-toggle-group": "1.1.2",
+    "@radix-ui/react-toggle": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "cmdk": "1.1.1",
+    "date-fns": "3.6.0",
+    "embla-carousel-react": "8.6.0",
+    "input-otp": "1.4.2",
+    "lucide-react": "0.487.0",
+    "next-themes": "0.4.6",
+    "react-day-picker": "8.10.1",
+    "react-hook-form": "7.55.0",
+    "react-resizable-panels": "2.1.7",
+    "recharts": "2.15.2",
+    "sonner": "2.0.3",
+    "tailwind-merge": "3.2.0",
+    "tw-animate-css": "1.3.8",
+    "vaul": "1.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
@@ -55,27 +117,22 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "license-checker": "^25.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "semantic-release": "^25.0.2",
     "shadcn-ui": "^0.9.5",
     "tailwindcss": "^4.1.18",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
   },
-  "scripts": {
-    "build": "vite build && tsc -p tsconfig.build.json",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "preinstall": "corepack enable && node ./internals/scripts/preflight.mjs",
-    "commit": "node internals/scripts/commit.mjs",
-    "prepare": "husky",
-    "release": "semantic-release",
-    "deps:check": "pnpm install --frozen-lockfile",
-    "licenses:check": "license-checker --production --failOn \"GPL;AGPL\""
+  "peerDependencies": {
+    "react": ">=18 <20",
+    "react-dom": ">=18 <20",
+    "tailwindcss": ">=4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,cjs,mjs}": [
