--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "verbatimModuleSyntax": true,
+    "skipLibCheck": true,
+
     "declaration": true,
     "emitDeclarationOnly": true,
     "outDir": "dist",
@@ -8,5 +15,5 @@
 
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src/index.ts", "src/components/ui/**/*", "src/tokens/**/*"]
 }
