--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "scripts": {
     "build": "vite build && tsc -p tsconfig.build.json && node ./internals/scripts/copy-styles.mjs",
+    "storybook": "node ./internals/scripts/preflight.mjs && storybook dev -p 6006",
+    "storybook:smoke": "node ./internals/scripts/preflight.mjs && storybook dev -p 6006 --smoke-test",
+    "build-storybook": "node ./internals/scripts/preflight.mjs && storybook build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -68,9 +71,10 @@
     "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-switch": "1.1.3",
     "@radix-ui/react-tabs": "1.1.3",
-    "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-toggle": "1.1.2",
+    "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
+    "@storybook/test": "^8.6.15",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
@@ -86,6 +90,7 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
+    "upgrade": "^1.1.0",
     "vaul": "1.1.2"
   },
   "devDependencies": {
@@ -98,7 +103,16 @@
     "@semantic-release/github": "^12.0.2",
     "@semantic-release/npm": "^13.1.3",
     "@semantic-release/release-notes-generator": "^14.1.0",
+    "@storybook/addon-essentials": "^8.6.15",
+    "@storybook/addon-interactions": "^8.6.15",
+    "@storybook/addon-links": "^8.6.15",
+    "@storybook/addon-toolbars": "^8.6.15",
+    "@storybook/blocks": "^8.6.15",
+    "@storybook/preview-api": "^8.6.15",
+    "@storybook/react": "^8.6.15",
+    "@storybook/react-vite": "^8.6.15",
     "@tailwindcss/cli": "^4.1.18",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -116,15 +130,16 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
     "license-checker": "^25.0.1",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
-    "semantic-release": "^25.0.2",
-    "shadcn-ui": "^0.9.5",
-    "tailwindcss": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "semantic-release": "^25.0.2",
+    "shadcn-ui": "^0.9.5",
+    "storybook": "^8.6.15",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
@@ -147,5 +162,10 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
