--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "access": "public"
   },
   "files": [
-    "dist"
+    "dist",
+    "mcp"
   ],
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -20,7 +21,11 @@
       "require": "./dist/index.cjs"
     },
     "./styles/*": "./dist/styles/*",
+    "./mcp": "./mcp/server.mjs",
     "./package.json": "./package.json"
+  },
+  "bin": {
+    "hmlet-ui-mcp": "./mcp/bin.mjs"
   },
   "engines": {
     "pnpm": ">=10.0.0",
@@ -28,6 +33,7 @@
   },
   "scripts": {
     "build": "vite build && tsc -p tsconfig.build.json && node ./internals/scripts/copy-styles.mjs",
+    "mcp": "node ./mcp/server.mjs",
     "storybook": "node ./internals/scripts/preflight.mjs && storybook dev -p 6006",
     "storybook:smoke": "node ./internals/scripts/preflight.mjs && storybook dev -p 6006 --smoke-test",
     "build-storybook": "node ./internals/scripts/preflight.mjs && storybook build",
@@ -48,6 +54,7 @@
     "**/*.css"
   ],
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "@radix-ui/react-accordion": "1.2.3",
     "@radix-ui/react-alert-dialog": "1.1.6",
     "@radix-ui/react-aspect-ratio": "1.1.2",
@@ -91,7 +98,8 @@
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
     "upgrade": "^1.1.0",
-    "vaul": "1.1.2"
+    "vaul": "1.1.2",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
