--- a/package.json
+++ b/package.json
@@ -52,6 +52,14 @@
   },
   "engineStrict": true,
   "packageManager": "pnpm@10.0.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "@parcel/watcher",
+      "sharp",
+      "unrs-resolver"
+    ]
+  },
   "sideEffects": [
     "**/*.css"
   ],
@@ -173,10 +181,5 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
   }
 }
