fix: feat: A new feature

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,3 @@
-# Hoist class-variance-authority to fix TS2742 declaration emit errors
-# when building in pnpm's isolated environments (e.g., git-hosted installs)
-public-hoist-pattern[]=class-variance-authority
-public-hoist-pattern[]=class-variance-authority/*
+# Fix TS2742 declaration emit errors in pnpm's isolated environments
+# by flattening node_modules structure (similar to npm/yarn behavior)
+shamefully-hoist=true
