--- a/package.json
+++ b/package.json
@@ -65,49 +65,11 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
-    "@radix-ui/react-accordion": "1.2.3",
-    "@radix-ui/react-alert-dialog": "1.1.6",
-    "@radix-ui/react-aspect-ratio": "1.1.2",
-    "@radix-ui/react-avatar": "1.1.3",
-    "@radix-ui/react-checkbox": "1.1.4",
-    "@radix-ui/react-collapsible": "1.1.3",
-    "@radix-ui/react-context-menu": "2.2.6",
-    "@radix-ui/react-dialog": "1.1.6",
-    "@radix-ui/react-dropdown-menu": "2.1.6",
-    "@radix-ui/react-hover-card": "1.1.6",
-    "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-menubar": "1.1.6",
-    "@radix-ui/react-navigation-menu": "1.2.5",
-    "@radix-ui/react-popover": "1.1.6",
-    "@radix-ui/react-progress": "1.1.2",
-    "@radix-ui/react-radio-group": "1.2.3",
-    "@radix-ui/react-scroll-area": "1.2.3",
-    "@radix-ui/react-select": "2.1.6",
-    "@radix-ui/react-separator": "1.1.2",
-    "@radix-ui/react-slider": "1.2.3",
-    "@radix-ui/react-slot": "1.1.2",
-    "@radix-ui/react-switch": "1.1.3",
-    "@radix-ui/react-tabs": "1.1.3",
-    "@radix-ui/react-toggle": "1.1.2",
-    "@radix-ui/react-toggle-group": "1.1.2",
-    "@radix-ui/react-tooltip": "1.1.8",
-    "@storybook/test": "^8.6.15",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "cmdk": "1.1.1",
     "date-fns": "3.6.0",
-    "embla-carousel-react": "8.6.0",
-    "input-otp": "1.4.2",
-    "lucide-react": "0.487.0",
-    "next-themes": "0.4.6",
-    "react-day-picker": "8.10.1",
-    "react-resizable-panels": "2.1.7",
-    "recharts": "2.15.2",
-    "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
-    "upgrade": "^1.1.0",
-    "vaul": "1.1.2",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -160,13 +122,87 @@
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "@radix-ui/react-accordion": "1.2.3",
+    "@radix-ui/react-alert-dialog": "1.1.6",
+    "@radix-ui/react-aspect-ratio": "1.1.2",
+    "@radix-ui/react-avatar": "1.1.3",
+    "@radix-ui/react-checkbox": "1.1.4",
+    "@radix-ui/react-collapsible": "1.1.3",
+    "@radix-ui/react-context-menu": "2.2.6",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-hover-card": "1.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-menubar": "1.1.6",
+    "@radix-ui/react-navigation-menu": "1.2.5",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-progress": "1.1.2",
+    "@radix-ui/react-radio-group": "1.2.3",
+    "@radix-ui/react-scroll-area": "1.2.3",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
+    "@radix-ui/react-slider": "1.2.3",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-switch": "1.1.3",
+    "@radix-ui/react-tabs": "1.1.3",
+    "@radix-ui/react-toggle": "1.1.2",
+    "@radix-ui/react-toggle-group": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
+    "@storybook/test": "^8.6.15",
+    "cmdk": "1.1.1",
+    "embla-carousel-react": "8.6.0",
+    "input-otp": "1.4.2",
+    "lucide-react": "0.487.0",
+    "next-themes": "0.4.6",
+    "react-day-picker": "8.10.1",
+    "react-resizable-panels": "2.1.7",
+    "recharts": "2.15.2",
+    "sonner": "2.0.3",
+    "upgrade": "^1.1.0",
+    "vaul": "1.1.2"
   },
   "peerDependencies": {
     "react": ">=18 <20",
     "react-dom": ">=18 <20",
     "tailwindcss": ">=4",
-    "react-hook-form": ">=7.71.0 <8"
+    "react-hook-form": ">=7.71.0 <8",
+    "@radix-ui/react-accordion": ">=1.2.0",
+    "@radix-ui/react-alert-dialog": ">=1.1.0",
+    "@radix-ui/react-aspect-ratio": ">=1.1.0",
+    "@radix-ui/react-avatar": ">=1.1.0",
+    "@radix-ui/react-checkbox": ">=1.1.0",
+    "@radix-ui/react-collapsible": ">=1.1.0",
+    "@radix-ui/react-context-menu": ">=2.2.0",
+    "@radix-ui/react-dialog": ">=1.1.0",
+    "@radix-ui/react-dropdown-menu": ">=2.1.0",
+    "@radix-ui/react-hover-card": ">=1.1.0",
+    "@radix-ui/react-label": ">=2.1.0",
+    "@radix-ui/react-menubar": ">=1.1.0",
+    "@radix-ui/react-navigation-menu": ">=1.2.0",
+    "@radix-ui/react-popover": ">=1.1.0",
+    "@radix-ui/react-progress": ">=1.1.0",
+    "@radix-ui/react-radio-group": ">=1.2.0",
+    "@radix-ui/react-scroll-area": ">=1.2.0",
+    "@radix-ui/react-select": ">=2.1.0",
+    "@radix-ui/react-separator": ">=1.1.0",
+    "@radix-ui/react-slider": ">=1.2.0",
+    "@radix-ui/react-slot": ">=1.1.0",
+    "@radix-ui/react-switch": ">=1.1.0",
+    "@radix-ui/react-tabs": ">=1.1.0",
+    "@radix-ui/react-toggle": ">=1.1.0",
+    "@radix-ui/react-toggle-group": ">=1.1.0",
+    "@radix-ui/react-tooltip": ">=1.1.0",
+    "cmdk": ">=1.0.0",
+    "embla-carousel-react": ">=8.0.0",
+    "input-otp": ">=1.4.0",
+    "lucide-react": ">=0.400.0",
+    "next-themes": ">=0.4.0",
+    "react-day-picker": ">=8.10.0",
+    "react-resizable-panels": ">=2.1.0",
+    "recharts": ">=2.15.0",
+    "sonner": ">=2.0.0",
+    "vaul": ">=1.1.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,cjs,mjs}": [
